Complete ImportFileController